# zatuscheme

./: .gitattributes  .gitignore  COPYING  Makefile.in  README  README.org  common.mk  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  builtin.cc  builtin.defs.hh  builtin.hh  builtin.scm  builtin_boolean.cc  builtin_boolean.defs.hh  builtin_boolean.hh  builtin_boolean.scm  builtin_boolean.strs.hh  builtin_char.cc  builtin_char.defs.hh  builtin_char.hh  builtin_char.scm  builtin_char.strs.hh  builtin_cons.cc  builtin_cons.defs.hh  builtin_cons.hh  builtin_cons.scm  builtin_cons.strs.hh  builtin_equal.cc  builtin_equal.defs.hh  builtin_equal.hh  builtin_equal.scm  builtin_extra.cc  builtin_extra.defs.hh  builtin_extra.hh  builtin_extra.iprocs.hh  builtin_extra.scm  builtin_extra.strs.hh  builtin_numeric.cc  builtin_numeric.defs.hh  builtin_numeric.hh  builtin_numeric.scm  builtin_numeric.strs.hh  builtin_port.cc  builtin_port.defs.hh  builtin_port.hh  builtin_port.scm  (+112 more)
test/: Makefile.am  Makefile.in  builtin_boolean_test.cc  builtin_boolean_test.scm  builtin_char_ready_test.cc  builtin_char_ready_test.scm  builtin_char_test.cc  builtin_char_test.scm  builtin_cons_test.cc  builtin_cons_test.scm  builtin_control_test.cc  builtin_control_test.scm  builtin_equal_test.cc  builtin_equal_test.scm  builtin_numeric_test.cc  builtin_numeric_test.scm  builtin_port_test.cc  builtin_port_test.scm  builtin_string_test.cc  builtin_string_test.scm  builtin_symbol_test.cc  builtin_symbol_test.scm  builtin_syntax_test.cc  builtin_syntax_test.scm  builtin_test.cc  builtin_vector_test.cc  builtin_vector_test.scm  delay_test.cc  delay_test.scm  describe.cc  describe.hh  enclose_test.cc  enclose_test.scm  eval_test.cc  extra_test.cc  extra_test_error.scm  extra_test_exit0.scm  extra_test_exit1.scm  extra_test_srfi_0.scm  extra_test_srfi_6.scm  (+18 more)
